--- a/public/index.html
+++ b/public/index.html
@@ -3,44 +3,45 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="/src/img/Logotipo/favicon-17.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" href="%PUBLIC_URL%/src/img/Logotipo/favicon-17.png" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="/src/img/Logotipo/favicon-17.png" />
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+  <meta name="description"
+    content="Professional portfolio as Graphic Designer. Strategies for brands in Barcelona Spain. Portafolio profesional como diseñadora gráfica. Estrategias de marcas en Barcelona España.">
+  <meta name="keywords"
+    content=", Valentina Aquino, graphic designer, diseñadora gráfica, diseñador gráfico, design, diseño, portfolio, portafolio, strategies for brands, estrategia para marcas, illustrations, ilustraciones, Barcelona, Buenos Aires, España, Spain">
+  <meta name="web_author" content="Rafael Chacin">
+  <meta name="robots" content="index, follow">
+  <meta name="robots" content="max-image-preview:standard">
+  <meta name="googlebot" content="index, follow">
+  <meta name="googlebot-Image" content="disallow">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="format-detection" content="telephone=no">
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/src/img/Logotipo/favicon-17.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
   <title></title>
+  <meta property="og:url" content="https://valentinaquino.com">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Valentina Aquino Portfolio">
+  <meta property="og:description"
+    content="Professional portfolio as Graphic Designer. Strategies for brands in Barcelona Spain.">
+  <meta property="og:image" content="https://valentinaquino.com/src/img/foto_thumbnail.jpg">
+  <meta property="twitter:url" content="https://valentinaquino.com">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Valentina Aquino Portfolio">
+  <meta name="twitter:description"
+    content="Professional portfolio as Graphic Designer. Strategies for brands in Barcelona Spain.">
+  <meta name="twitter:image" content="https://valentinaquino.com/src/img/foto_thumbnail.jpg">
+  <meta property="og:locale" content="en_ES">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
-        integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
-        crossorigin="anonymous">
+    integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+    crossorigin="anonymous">
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 </body>
 
 </html>
