--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="%PUBLIC_URL%/src/img/Logotipo/favicon-17.png" />
+  <link rel="icon" href="favicon.ico" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Professional portfolio as Graphic Designer. Strategies for brands in Barcelona Spain. Portafolio profesional como diseñadora gráfica. Estrategias de marcas en Barcelona España.">
@@ -19,7 +19,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="format-detection" content="telephone=no">
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/src/img/Logotipo/favicon-17.png" />
+  <link rel="apple-touch-icon" href="favicon.ico" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title></title>
   <meta property="og:url" content="https://valentinaquino.com">
